# libgit2

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Octave.exp  Octave.lib  README.md  mkdocs.yml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Makefile_3DS  Makefile_GCN  Makefile_Linux  Makefile_Wii
Engine/Assets/Themes/: adwaita.css  ambiance.css  ayu-mirage.css  chaos.css  clouds-midnight.css  cobalt.css  dracula.css  github-dark.css  gruvbox.css  idle-fingers.css  kr-theme.css  material-ocean.css  material-original.css  merbivore-soft.css  merbivore.css  mono-industrial-clear.css  mono-industrial.css  monokai-spacegray-eighties.css  monokai.css  obsidian.css  one-dark.css  pastel-on-dark.css  railscasts.css  solarized-dark.css  terminal.css  tomorrow-night-blue.css  tomorrow-night-bright.css  tomorrow-night-eighties.css  tomorrow-night.css  twilight.css  unity.css  vibrant-ink.css
Engine/Scripts/: FirstPersonController.lua  LuaPanda.lua
Engine/Source/: CMakeLists.txt
Engine/Source/Audio/: Audio.cpp
Engine/Source/Editor/: ActionManager.cpp  ActionManager.h  BuildCache.cpp  EditorConstants.h  EditorIcons.h  EditorImgui.cpp  EditorImgui.h  EditorMain.cpp  EditorState.cpp  EditorState.h  EditorTypes.h  EditorUIHookManager.cpp  InputManager.cpp  InputMapWindow.cpp  InputMapWindow.h  PaintManager.cpp  PlayerInputDebugger.cpp  PlayerInputDebugger.h  PlayerInputEditor.cpp  PlayerInputEditor.h  Viewport2d.cpp  Viewport3d.cpp  imgui_impl_xcb.cpp
Engine/Source/Engine/: Assertion.h  Asset.h  AssetManager.cpp  AssetManager.h  AssetRef.h  Datum.h  (+23 more)
(+389 files in other folders)
